# naive-instruments

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  \  audition-new-files.sh  audition-new-samples.sh  build.sh  check-audio.sh  check.sh  checksums.yaml  compare-audio.sh  compile_commands.json  configure  listen-to-all.sh  run-tests.sh  scratch.cpp  scratch.sh  tags
.github/workflows/: c-cpp.yml  cmake-single-platform.yml
audition/: High pass filtered square wave.checksum.txt
docs/: control-signals.md  how-to-add-a-new-command.sh  installation.md  intro.md  readme.sh
expected-samples/: 17 harmonic series on 200Hz.checksum.txt  17 harmonic spread on 200Hz.checksum.txt  17 harmonic spread on 20Hz.checksum.txt  17 harmonic spread on 30Hz.checksum.txt  17 harmonic spread on 40Hz.checksum.txt  17 harmonic spread on 440Hz.checksum.txt  17 harmonic spread on 50Hz.checksum.txt  440 into 220 fm series.checksum.txt  440Hz Sine boop.checksum.txt  440Hz Sine.checksum.txt  440Hz square wave.checksum.txt  65 harmonic spread on 200Hz.checksum.txt  65 harmonic spread on 20Hz.checksum.txt  65 harmonic spread on 30Hz.checksum.txt  65 harmonic spread on 40Hz.checksum.txt  65 harmonic spread on 440Hz.checksum.txt  65 harmonic spread on 50Hz.checksum.txt  9 harmonic spread on 200Hz.checksum.txt  9 harmonic spread on 20Hz.checksum.txt  9 harmonic spread on 30Hz.checksum.txt  9 harmonic spread on 40Hz.checksum.txt  9 harmonic spread on 440Hz.checksum.txt  9 harmonic spread on 50Hz.checksum.txt  Filtered square wave.checksum.txt  Sine with linear decay envelope on amplitude.checksum.txt  Square wave with signal envelope.checksum.txt  harmonic_series( 100, 4).checksum.txt  harmonic_series( 150, 4).checksum.txt  harmonic_series( 200, 4).checksum.txt  harmonic_series( 250, 4).checksum.txt  harmonic_series( 300, 4).checksum.txt  harmonic_series( 350, 4).checksum.txt  harmonic_series( 400, 4).checksum.txt  harmonic_series( 450, 4).checksum.txt  harmonic_series( 500, 4).checksum.txt  harmonic_series( 550, 4).checksum.txt  harmonic_series( 600, 4).checksum.txt  harmonic_series( 650, 4).checksum.txt  harmonic_series( 700, 4).checksum.txt  harmonic_series( 750, 4).checksum.txt  (+9 more)
resources/: wav-header-gist.cpp
src/: Add.h  BreakpointEnvelope.h  Color.h  Constant.h  FixedPipe.h  MonoBuffer.h  Multiply.h  NaiveInstrument.h  Osc.h  Patch.h  Property.h  Property.test.cpp  Signal.h  Signal.test.cpp  SignalShorthands.cpp  SignalShorthands.h  SignalShorthands.test.cpp  Socket.h  TestUtils.h  UnsignedSaw.h  WAV_HEADER.h  WavWriter.h  Waveforms.h  Wavetable.h  catch-config.test.cpp  constants.h  core.h  lib.h  main.cpp  makeASawToothWave.cpp  makeASawToothWave.h  record.cpp  record.h  signal-processes.h  signal-processes.test.cpp  signal-processors.h  signal-processors.test.cpp  snapshot-tests.cpp  test-framework.h
src/analysis/: BangAwaiter.h  RMS.h  RMSTracker.h  RmsAsciGraph.h  RmsAsciGrapher.h  WaveformBufferer.h
src/apps/: BoopApp.h  FMApp.h  FilterApp.h  GraphApp.h  HelloApp.h  MetronomeApp.h  MixApp.h  NoiseApp.h  OscApp.h  RandomApp.h  RandomEnvelopeApp.h  RulerApp.h  SliceApp.h  ZxSelectApp.h  getch-log.cpp  playback-demo.cpp  relentless-tone.cpp  rms-graph.cpp  ruler.cpp  slice.cpp  zx-dicer.cpp  zx-select.cpp
src/cli/: AudioCommand.h  Command.h  CommandLineApp.h  CommandLineArguments.cpp  CommandLineArguments.h  LineTool.h  NCursesWindow.h  RectangleBuffer.h  RectangularLineTool.h  Ruler.h  SignalString.cpp  SignalString.h  TextTool.h  WindowDimensions.h
src/commands/: BoopCommand.h  FMApp.h  FMCommand.h  FilterApp.h  FilterCommand.h  GraphApp.h  GraphCommand.h  HelloCommand.h  JamCommand.h  MetronomeApp.h  MetronomeCommand.h  MixApp.h  MixCommand.h  NoiseApp.h  NoiseCommand.h  OscCommand.h  RandomApp.h  RandomCommand.h  RandomEnvelopeCommand.h  RulerCommand.h  SliceApp.h  SliceCommand.h  ZxSelectApp.h  ZxSelectCommand.h
src/core/: AbstractFrameStream.h  AbstractFrameStreamConsumer.h  Errors.h  FrameStream.h  FrameStreamConsumer.h  Hopefully.h  MonoBuffer.h  NaiveInstrument.h  Patch.h  Sample.h  Sample.test.cpp  SampleData.h  SampleData.test.cpp  SampleRegion.h  Signal.cpp  Signal.h  Signal.test.cpp  SignalInput.h  Socket.h  UntypedSignal.h  UntypedSignalInput.h
src/file-io/: WAV_HEADER.h  WavReader.h  WavWriter.h  WavWriter.test.cpp  piping.cpp  piping.h  readAudioFile.cpp  readAudioFile.h  readAudioFile.test.cpp  record.cpp  record.h  writeAudioFile.cpp  writeAudioFile.h
src/generative/: Random.h  Random.test.cpp  RandomSignal.h
src/instruments/: AHD.h  Add.cpp  Add.h  BreakpointEnvelope.cpp  BreakpointEnvelope.h  BreakpointEnvelope.test.cpp  BufferWriter.h  Bufferer.h  ButterworthFilter.h  CDJ.h  Constant.h  ControlSignal.h  ControlSignal.test.cpp  ControlString.cpp  ControlString.h  ControlString.test.cpp  Decay.h  FixedPipe.h  Floor.h  Invert.h  LFO.h  Metronome.h  MetronomicResetter.h  MonoToStereo.h  Multiply.cpp  Multiply.h  Noise.h  Osc.cpp  Osc.h  Pacer.h  PassThrough.h  Pauser.h  Pitch.h  PitchConverter.h  Ramp.h  Resetter.h  Rhythm.cpp  Rhythm.h  Sampler.h  Stereo.h  (+3 more)
src/lilypond/: Lilypond.cpp  Lilypond.h
src/parsing/: CommonPatterns.cpp  CommonPatterns.h  CommonPatterns.test.cpp  EvaluateUnits.h  LazyRegex.cpp  LazyRegex.h  LazyRegex.test.cpp  NumberPatterns.cpp  NumberPatterns.h  NumberPatterns.test.cpp  NumberWithUnit.cpp  NumberWithUnit.h  NumberWithUnit.test.cpp  Parse.cpp  Parse.h  RegularExpressionSources.cpp  RegularExpressionSources.h  RegularExpressionSources.test.cpp  RhythmString.h  Unit.cpp  Unit.h  Units.cpp  Units.h  Units.test.cpp  parse.test.cpp
src/pitch/: MidiNumber.h  MidiNumber.test.cpp  Pitch.cpp  Pitch.h  Pitch.test.cpp
src/playback/: BufferedPlayback.cpp  BufferedPlayback.h  CircularBuffer.h  InteractivePlayback.h
src/signal/: BreakpointEnvelopeSequencer.cpp  BreakpointEnvelopeSequencer.h  BreakpointEnvelopeSequencer.test.cpp  Constructors.cpp  Constructors.h  Constructors.test.cpp  (+23 more)
tests/: basic-waveforms.sh  basic-waveforms.test.sh  checkaudio.sh  checksums.yaml  fm-synthesis.sh  metronome.sh  metronome.test.sh  run-all.sh
(+5 files in other folders)
